[gd_scene load_steps=7 format=3 uid="uid://dfpl55viqts3e"]

[ext_resource type="Script" uid="uid://4x8caeu1vvpy" path="res://scenes/artifact_handler/artifact_handler.gd" id="1_abt81"]
[ext_resource type="Texture2D" uid="uid://wrnwpdomtt2e" path="res://art/art_test/arrow_right_short_enabled.png" id="1_xishf"]
[ext_resource type="Texture2D" uid="uid://l7qxnpdwg13q" path="res://art/art_test/arrow_right_short_disabled.png" id="2_qklxk"]
[ext_resource type="Script" uid="uid://08etak6tc631" path="res://scenes/artifact_handler/artifacts_control.gd" id="3_0cpy0"]
[ext_resource type="PackedScene" uid="uid://d2orfl107kf37" path="res://scenes/artifact_handler/artifact_ui.tscn" id="4_s8wm8"]
[ext_resource type="Resource" uid="uid://cbr5oda8ied4r" path="res://artifacts/code_discount.tres" id="6_abt81"]

[node name="ArtifactHandler" type="HBoxContainer"]
custom_minimum_size = Vector2(1000, 100)
offset_right = 1024.0
offset_bottom = 100.0
script = ExtResource("1_abt81")

[node name="LeftButton" type="TextureButton" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.27451)
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
disabled = true
texture_normal = ExtResource("1_xishf")
texture_pressed = ExtResource("1_xishf")
texture_hover = ExtResource("1_xishf")
texture_disabled = ExtResource("2_qklxk")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[node name="ArtifactsControl" type="Control" parent="." node_paths=PackedStringArray("left_button", "right_button")]
clip_contents = true
custom_minimum_size = Vector2(888, 120)
layout_mode = 2
script = ExtResource("3_0cpy0")
left_button = NodePath("../LeftButton")
right_button = NodePath("../RightButton")

[node name="Artifacts" type="HBoxContainer" parent="ArtifactsControl"]
unique_name_in_owner = true
custom_minimum_size = Vector2(140, 20)
layout_mode = 0
offset_right = 2040.0
offset_bottom = 120.0
theme_override_constants/separation = 8

[node name="ArtifactUI" parent="ArtifactsControl/Artifacts" instance=ExtResource("4_s8wm8")]
layout_mode = 2

[node name="ArtifactUI2" parent="ArtifactsControl/Artifacts" instance=ExtResource("4_s8wm8")]
layout_mode = 2

[node name="ArtifactUI3" parent="ArtifactsControl/Artifacts" instance=ExtResource("4_s8wm8")]
layout_mode = 2

[node name="ArtifactUI4" parent="ArtifactsControl/Artifacts" instance=ExtResource("4_s8wm8")]
layout_mode = 2

[node name="ArtifactUI5" parent="ArtifactsControl/Artifacts" instance=ExtResource("4_s8wm8")]
layout_mode = 2

[node name="ArtifactUI6" parent="ArtifactsControl/Artifacts" instance=ExtResource("4_s8wm8")]
layout_mode = 2

[node name="ArtifactUI7" parent="ArtifactsControl/Artifacts" instance=ExtResource("4_s8wm8")]
layout_mode = 2

[node name="ArtifactUI8" parent="ArtifactsControl/Artifacts" instance=ExtResource("4_s8wm8")]
layout_mode = 2
artifact = ExtResource("6_abt81")

[node name="ArtifactUI9" parent="ArtifactsControl/Artifacts" instance=ExtResource("4_s8wm8")]
layout_mode = 2

[node name="ArtifactUI10" parent="ArtifactsControl/Artifacts" instance=ExtResource("4_s8wm8")]
layout_mode = 2

[node name="ArtifactUI11" parent="ArtifactsControl/Artifacts" instance=ExtResource("4_s8wm8")]
layout_mode = 2

[node name="ArtifactUI12" parent="ArtifactsControl/Artifacts" instance=ExtResource("4_s8wm8")]
layout_mode = 2

[node name="ArtifactUI13" parent="ArtifactsControl/Artifacts" instance=ExtResource("4_s8wm8")]
layout_mode = 2

[node name="ArtifactUI14" parent="ArtifactsControl/Artifacts" instance=ExtResource("4_s8wm8")]
layout_mode = 2

[node name="ArtifactUI15" parent="ArtifactsControl/Artifacts" instance=ExtResource("4_s8wm8")]
layout_mode = 2

[node name="ArtifactUI16" parent="ArtifactsControl/Artifacts" instance=ExtResource("4_s8wm8")]
layout_mode = 2

[node name="RightButton" type="TextureButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
disabled = true
texture_normal = ExtResource("1_xishf")
texture_pressed = ExtResource("1_xishf")
texture_hover = ExtResource("1_xishf")
texture_disabled = ExtResource("2_qklxk")
ignore_texture_size = true
stretch_mode = 5
